# Telegram_pass_bot

./: .gitignore  Makefile  README.md  bot_token_reciever.py  pyproject.toml
telegram_pass_bot/: __main__.py  bot_token.py  main.py
telegram_pass_bot/bot_routers/: registration.py
telegram_pass_bot/db_interactions/: __init__.py  db_get_data.py  db_init.py  db_put_data.py  delete_from_db.py
telegram_pass_bot/handlers/: help_router.py  not_command_handlers.py  registration.py  sign_in.py  start.py  user_db_interactions.py
telegram_pass_bot/handlers/db_interactions/: db_get_data.py  db_put_data.py
telegram_pass_bot/handlers/templates/: help_template.py
telegram_pass_bot/handlers/user_db_interactions/: delete_pass.py  get_pass.py  put_pass.py
telegram_pass_bot/pass_generator/: pass_generator.py
tests/: test_pass_gen.py
