[tool.poetry]
name = "telegram-pass-bot"
version = "0.1.0"
description = ""
authors = ["Pineapple_Juice <st.okopnyi@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_pass_bot"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
