[tool.poetry]
name = "telegram-pass-bot"
version = "0.1.0"
description = "telegram bot which keep passwords"
authors = ["Pineapple_Juice <st.okopnyi@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_pass_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {version = "^3.0.0b7", allow-prereleases = true}
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
